--- a/html/css/sass/patterns/01-blocks.scss
+++ b/html/css/sass/patterns/01-blocks.scss
@@ -25,43 +25,43 @@
   display: inline-block;
   margin-bottom: 1.5em;
   width: 100%;
-  border-bottom: 0.2em solid $shadow;
+  border-bottom: 0.2em solid $dark;
 }
 
 /* /// Block colours */
 
 .block--aqua {
-  background-color: $mid-aqua;
+  background-color: $mid;
   // shadow colour-context tweak
-  border-bottom: 0.2em solid darken($mid-aqua,8%);
+  border-bottom: 0.2em solid darken($mid,8%);
 }
 
 .block--dark-aqua {
-  background-color: $dark-aqua;
+  background-color: $dark;
   color: $white;
   // shadow colour-context tweak
-  border-bottom: 0.2em solid darken($dark-aqua,7%);
+  border-bottom: 0.2em solid darken($dark,7%);
 }
 
 .block--charcoal {
-  background-color: $charcoal;
+  background-color: $dark-text;
   color: $white;
   // shadow colour-context tweak
-  border-bottom: 0.2em solid lighten($charcoal,20%);
+  border-bottom: 0.2em solid lighten($dark-text,20%);
 }
 
 /* /// Top trim - only for blocks with no header bar */
 
 .block--trim-top-aqua {
-  border-top: 0.4em solid $aqua;
+  border-top: 0.4em solid $light;
 }
 
 .block--trim-top-dark-aqua {
-  border-top: 0.4em solid $dark-aqua;
+  border-top: 0.4em solid $dark;
 }
 
 .block--trim-top-charcoal {
-  border-top: 0.4em solid $charcoal;
+  border-top: 0.4em solid $dark-text;
 }
 
 /* /// Bottom trim should only be used on white blocks */
@@ -77,10 +77,10 @@
     width: 100%;
     height: 0.3em;
     margin-top: 0.4em;
-    background-color: $mid-aqua;
+    background-color: $mid;
   }
   // shadow colour-context tweak
-  border-bottom: 0.2em solid darken($mid-aqua,8%);
+  border-bottom: 0.2em solid darken($mid,8%);
 }
 
 .block--trim-bottom-dark-aqua {
@@ -94,10 +94,10 @@
     width: 100%;
     height: 0.3em;
     margin-top: 0.4em;
-    background-color: $dark-aqua;
+    background-color: $dark;
   }
   // shadow colour-context tweak
-  border-bottom: 0.2em solid darken($dark-aqua,7%);
+  border-bottom: 0.2em solid darken($dark,7%);
 }
 
 .block--trim-bottom-charcoal {
@@ -111,17 +111,17 @@
     width: 100%;
     height: 0.3em;
     margin-top: 0.4em;
-    background-color: $charcoal;
+    background-color: $dark-text;
   }
   // shadow colour-context tweak
-  border-bottom: 0.2em solid lighten($charcoal,20%);
+  border-bottom: 0.2em solid lighten($dark-text,20%);
 }
 
 /* /// Block heading bars */
 
 .block__heading {
   padding: 0.7em 1.4em 0.6em 1.4em;
-  background-color: $charcoal;
+  background-color: $dark-text;
   color: $white;
 }
 
@@ -130,11 +130,11 @@
 }
 
 .block__heading--aqua {
-  background-color: $mid-aqua;
+  background-color: $mid;
 }
 
 .block__heading--dark-aqua {
-  background-color: $dark-aqua;
+  background-color: $dark;
 }
 
 /* Padding tweaks; if using a heading bar the same
